# AgenticLangraph

./: main.py  pyproject.toml  requirenments.txt
1_BasicChatbot/: 1_basic_chatbot.ipynb
